style.css
body
{
    font-family: 'Cinzel', serif;
}

*
{
 margin: 0;
 padding: 0;
}

.container
{
    max-width: 1200px;
    margin: 0 auto;
    padding-bottom: 15px;
}

/* Header */
video
{
    position: static;
    width: 100vw;
    height: fill;
}
.overlay_video_content
{
    max-height: max-content;
    word-wrap: break-word;
    text-overflow: ellipsis;
}

.text_overlay
{
   transform: translate(-50%, -50%); 
   color: rgb(245, 245, 245);
   position: absolute;
   mix-blend-mode: overlay;
   text-align: center;
   padding: 180px 0;
   top: 50%;
   left: 50%;
}

.background-image-text-title{
    font-size: 75px;
    padding-bottom: 50px;
}

.background-image-text{
    font-size: 30px;
    opacity: 75%;
}

li {
    display: inline;
    text-align: right;
    text-decoration: none;
    padding: 20px;
    margin-right: 90;
    margin-left: 90;
    margin: 5px;
    font-size: 25px;
}

.nav-menu{
    text-align: right;
    background-color: rgb(194,216,229);
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    transition: all 0.3s ease-in-out;
    justify-content: left;
}

.nav-menu .container
{
    display: flex;
    padding: 10px 0;
    transition: all 0.3s ease-in-out;
}

.nav-menu.active
{ 
background-color: rgb(255,255,255);
box-shadow: 0 10px 10px rgb(0,0,0, 0.2);
}

.nav-menu.active a {
    color: rgb(0,0,0, 0.3);
}

.nav-menu.active .container
{
    padding: 2px 0;
}

.nav-menu a:hover{
    color: rgb(110, 111, 112);
    font-weight: bold;
}

.menu-list li a{
    margin: auto;
    display: inline-block;
    padding: 10px 20px 10px 20px;
    color:rgb(236, 255, 252);
    font-weight: bold;
    text-align: center;
    font-size: 20px;
    border: 4px solid none;
    box-shadow: 5px 4px 10px rgba(194, 216, 229, .4);
    transition: all 0.3s ease-in-out;
}

.header{
    height: var(--header-height);
    width: 100%;
    background-color: rbg(250,235,215);
    z-index: var(--zindex-header);

}

.menu{
    color: rbg(0,0,0);
    text-transform: uppercase;
}

.menu-list{
    list-style-type: none;
    width: 100%;
    margin: 0;
    padding: 0;
    overflow: hidden;
    align-items: center;
    z-index: 2;
}

.menu-item
{
    display: inline-block;
    margin-bottom: 0;
    margin-left: var(--space-md);
}

.container h2
{
    text-align: center;
}
/* About Me */

.about-section{
    margin: auto;
    width: 75%;
    height: 100%;
    display: grid;
    grid-template-columns: 1fr 4fr;
    padding: 20px 80px;
    margin: 20px 20px;
}

p.about-text{
    align-self: baseline;
    padding-top: 25px;
    padding-bottom: 10px;
}

.bio-img div
{
    border-radius: 100%;
    box-sizing: border-box;
    height: 100px;
    width: 100px;
    padding: 50px;
}

img.bio_pic 
{
    height: auto;
    width: 300px; 
    padding: 20px 50px;
}


/* Skills */


/* Footer */
.footer
{
    margin: auto;
    position: relative;
    display: block;
    height: 400px;
    width: 100vw;
    background-color: rgb(194,216,229);
}

.footer-header{
    padding: 20px;
    text-align: center;
    color: rgb(0, 0, 0, 0.5);
    text-transform: uppercase;
    text-decoration: underline;
}
   
.footer-nav {
    /* margin: auto; */
    height: 250px;
    width: 100%;
    padding-top: 50px;
    padding-bottom: 20px;
    background-color: rgb(194,216,229);
    text-align: center;
    list-style-type: none;
}

     a
     {
        display: flex;
        justify-content: center;
        padding: 15px;
     }

